--- a/plugins/2018.3326/android/corona.gradle
+++ b/plugins/2018.3326/android/corona.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    implementation("com.appodeal.ads.sdk.networks:facebook:2.11.1.23")
+    implementation 'com.appodeal.ads.sdk.networks:meta:3.1.3.1'
 }
